@@ -13,6 +13,9 @@ import org.apache.lucene.util.automaton.Operations;
 import org.elasticsearch.action.admin.cluster.node.tasks.cancel.TransportCancelTasksAction;
 import org.elasticsearch.action.admin.cluster.repositories.cleanup.TransportCleanupRepositoryAction;
 import org.elasticsearch.action.admin.cluster.shards.TransportClusterSearchShardsAction;
+import org.elasticsearch.action.admin.cluster.snapshots.create.TransportCreateSnapshotAction;
+import org.elasticsearch.action.admin.cluster.snapshots.delete.TransportDeleteSnapshotAction;
+import org.elasticsearch.action.admin.cluster.snapshots.restore.TransportRestoreSnapshotAction;
 import org.elasticsearch.action.admin.cluster.state.ClusterStateAction;
 import org.elasticsearch.action.admin.cluster.storedscripts.TransportDeleteStoredScriptAction;
 import org.elasticsearch.action.admin.indices.create.TransportCreateIndexAction;
@@ -35,10 +38,14 @@ import org.elasticsearch.action.search.TransportClosePointInTimeAction;
 import org.elasticsearch.action.search.TransportOpenPointInTimeAction;
 import org.elasticsearch.action.search.TransportSearchAction;
 import org.elasticsearch.action.search.TransportSearchScrollAction;
+import org.elasticsearch.action.support.IndexComponentSelector;
 import org.elasticsearch.cluster.metadata.DataStream;
+import org.elasticsearch.cluster.metadata.DataStreamOptions;
 import org.elasticsearch.cluster.metadata.IndexAbstraction;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.index.IndexMode;
 import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.index.reindex.ReindexAction;
 import org.elasticsearch.tasks.TaskCancellationService;
@@ -66,6 +73,7 @@ import org.elasticsearch.xpack.core.security.test.TestRestrictedIndices;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import static org.elasticsearch.xpack.core.security.test.TestRestrictedIndices.INTERNAL_SECURITY_MAIN_INDEX_7;
@@ -250,12 +258,23 @@ public class InternalUsersTests extends ESTestCase {
 
         final SimpleRole role = getLocalClusterRole(InternalUsers.DATA_STREAM_LIFECYCLE_USER);
 
-        assertThat(role.cluster(), is(ClusterPermission.NONE));
         assertThat(role.runAs(), is(RunAsPermission.NONE));
         assertThat(role.application(), is(ApplicationPermission.NONE));
         assertThat(role.remoteIndices(), is(RemoteIndicesPermission.NONE));
 
-        final List<String> allowedSystemDataStreams = Arrays.asList(".fleet-actions-results", ".fleet-fileds*", ".workflows*");
+        final List<String> sampleClusterActions = List.of(
+            TransportCreateSnapshotAction.TYPE.name(),
+            TransportDeleteSnapshotAction.TYPE.name(),
+            TransportRestoreSnapshotAction.TYPE.name()
+        );
+        checkClusterAccess(InternalUsers.DATA_STREAM_LIFECYCLE_USER, role, randomFrom(sampleClusterActions), true);
+
+        final List<String> allowedSystemDataStreams = Arrays.asList(
+            ".fleet-actions-results",
+            ".fleet-fileds*",
+            ".workflows*",
+            ".kibana_change_history*"
+        );
         for (var group : role.indices().groups()) {
             if (group.allowRestrictedIndices()) {
                 assertThat(group.indices(), arrayContaining(allowedSystemDataStreams.toArray(new String[0])));
@@ -283,7 +302,7 @@ public class InternalUsersTests extends ESTestCase {
         );
         final String dataStream = randomAlphaOfLengthBetween(3, 12);
 
-        checkIndexAccess(role, randomFrom(sampleIndexActions), dataStream, true);
+        checkDataStreamAccess(role, randomFrom(sampleIndexActions), dataStream, false, IndexComponentSelector.DATA, true);
         // Also check backing index access
         checkIndexAccess(
             role,
@@ -292,7 +311,7 @@ public class InternalUsersTests extends ESTestCase {
             true
         );
 
-        checkIndexAccess(role, randomFrom(sampleIndexActions), dataStream + "::failures", true);
+        checkDataStreamAccess(role, randomFrom(sampleIndexActions), dataStream, false, IndexComponentSelector.FAILURES, true);
         // Also check failure index access
         checkIndexAccess(
             role,
@@ -302,7 +321,14 @@ public class InternalUsersTests extends ESTestCase {
         );
 
         allowedSystemDataStreams.forEach(allowedSystemDataStream -> {
-            checkIndexAccess(role, randomFrom(sampleSystemDataStreamActions), allowedSystemDataStream, true);
+            checkDataStreamAccess(
+                role,
+                randomFrom(sampleSystemDataStreamActions),
+                allowedSystemDataStream,
+                true,
+                IndexComponentSelector.DATA,
+                true
+            );
             checkIndexAccess(
                 role,
                 randomFrom(sampleSystemDataStreamActions),
@@ -310,7 +336,14 @@ public class InternalUsersTests extends ESTestCase {
                 true
             );
 
-            checkIndexAccess(role, randomFrom(sampleSystemDataStreamActions), allowedSystemDataStream + "::failures", true);
+            checkDataStreamAccess(
+                role,
+                randomFrom(sampleSystemDataStreamActions),
+                allowedSystemDataStream,
+                true,
+                IndexComponentSelector.FAILURES,
+                true
+            );
             checkIndexAccess(
                 role,
                 randomFrom(sampleSystemDataStreamActions),
@@ -356,7 +389,7 @@ public class InternalUsersTests extends ESTestCase {
         );
 
         final String dataStream = randomAlphaOfLengthBetween(3, 12);
-        checkIndexAccess(role, randomFrom(sampleIndexActions), dataStream, true);
+        checkDataStreamAccess(role, randomFrom(sampleIndexActions), dataStream, false, IndexComponentSelector.DATA, true);
         // Also check backing index access
         checkIndexAccess(
             role,
@@ -396,7 +429,8 @@ public class InternalUsersTests extends ESTestCase {
             TaskCancellationService.REMOTE_CLUSTER_BAN_PARENT_ACTION_NAME,
             TaskCancellationService.REMOTE_CLUSTER_CANCEL_CHILD_ACTION_NAME,
             "cluster:internal:data/read/esql/open_exchange",
-            "cluster:internal:data/read/esql/exchange"
+            "cluster:internal:data/read/esql/exchange",
+            XPackInfoAction.NAME
         );
 
         for (String clusterAction : allowedClusterActions) {
@@ -406,7 +440,7 @@ public class InternalUsersTests extends ESTestCase {
         checkClusterAccess(
             crossProjectSearchUser,
             role,
-            randomFrom(ClusterStateAction.NAME, XPackInfoAction.NAME, TransportService.HANDSHAKE_ACTION_NAME),
+            randomFrom(ClusterStateAction.NAME, TransportService.HANDSHAKE_ACTION_NAME),
             false
         );
 
@@ -453,4 +487,52 @@ public class InternalUsersTests extends ESTestCase {
         );
     }
 
+    private static void checkDataStreamAccess(
+        SimpleRole role,
+        String action,
+        String dataStreamName,
+        boolean isSystem,
+        IndexComponentSelector selector,
+        boolean expectedValue
+    ) {
+        if (expectedValue) {
+            // Can't check this if "expectedValue" is false, because the role might grant the action for a different index
+            assertThat("Role " + role + " should grant " + action, role.indices().check(action), is(true));
+        }
+
+        final String combinedName = new IndexNameExpressionResolver.ResolvedExpression(dataStreamName, selector).combined();
+        final Automaton automaton = role.indices().allowedActionsMatcher(combinedName);
+        assertThat(
+            "Role " + role + ", action " + action + " access to " + combinedName,
+            new CharacterRunAutomaton(automaton).run(action),
+            is(expectedValue)
+        );
+
+        final IndexMetadata metadata = IndexMetadata.builder(".ds-" + dataStreamName)
+            .settings(indexSettings(IndexVersion.current(), 1, 1))
+            .build();
+
+        DataStream dataStream = new DataStream(
+            dataStreamName,
+            List.of(metadata.getIndex()),
+            randomLongBetween(0, 1000),
+            Map.of(),
+            isSystem || randomBoolean(),
+            false,
+            isSystem,
+            false,
+            IndexMode.STANDARD,
+            null,
+            DataStreamOptions.EMPTY,
+            List.of(),
+            false,
+            null
+        );
+
+        assertThat(
+            "Role " + role + ", action " + action + " access to " + combinedName,
+            role.allowedIndicesMatcher(action).test(dataStream, selector),
+            is(expectedValue)
+        );
+    }
 }
