@@ -10,12 +10,19 @@ package org.elasticsearch.xpack.esql.datasources;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.compute.data.BlockFactory;
 import org.elasticsearch.core.IOUtils;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.env.Environment;
+import org.elasticsearch.telemetry.metric.MeterRegistry;
+import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.watcher.ResourceWatcherService;
+import org.elasticsearch.xpack.esql.datasources.spi.Configured;
 import org.elasticsearch.xpack.esql.datasources.spi.Connector;
 import org.elasticsearch.xpack.esql.datasources.spi.ConnectorFactory;
 import org.elasticsearch.xpack.esql.datasources.spi.DataSourcePlugin;
 import org.elasticsearch.xpack.esql.datasources.spi.DecompressionCodec;
 import org.elasticsearch.xpack.esql.datasources.spi.ExternalSourceFactory;
-import org.elasticsearch.xpack.esql.datasources.spi.FilterPushdownSupport;
+import org.elasticsearch.xpack.esql.datasources.spi.ExternalSourceMetrics;
 import org.elasticsearch.xpack.esql.datasources.spi.FormatReaderFactory;
 import org.elasticsearch.xpack.esql.datasources.spi.FormatSpec;
 import org.elasticsearch.xpack.esql.datasources.spi.SourceMetadata;
@@ -23,12 +30,14 @@ import org.elasticsearch.xpack.esql.datasources.spi.SourceOperatorFactoryProvide
 import org.elasticsearch.xpack.esql.datasources.spi.StoragePath;
 import org.elasticsearch.xpack.esql.datasources.spi.StorageProvider;
 import org.elasticsearch.xpack.esql.datasources.spi.StorageProviderFactory;
+import org.elasticsearch.xpack.esql.datasources.spi.StorageProviderServices;
 import org.elasticsearch.xpack.esql.datasources.spi.TableCatalog;
 import org.elasticsearch.xpack.esql.datasources.spi.TableCatalogFactory;
 
 import java.io.Closeable;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -37,6 +46,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.Executor;
 import java.util.concurrent.ExecutorService;
+import java.util.function.BooleanSupplier;
 
 /**
  * Module that collects all data source implementations from plugins.
@@ -53,23 +63,98 @@ public final class DataSourceModule implements Closeable {
     private final Map<String, ExternalSourceFactory> sourceFactories;
     // TODO(#142815): backward-compat bridge — remove once table functions land.
     private final Map<String, SourceOperatorFactoryProvider> pluginFactories;
-    private final FilterPushdownRegistry filterPushdownRegistry;
     private final List<Closeable> managedCloseables;
     private final DataSourceCapabilities capabilities;
+    private final ExternalSourceMetrics externalSourceMetrics;
 
     public DataSourceModule(
         List<DataSourcePlugin> dataSourcePlugins,
         DataSourceCapabilities capabilities,
         Settings settings,
         BlockFactory blockFactory,
-        ExecutorService executor
+        ExecutorService executor,
+        DataSourceCredentials credentials,
+        BooleanSupplier managedIdentityEnabled
+    ) {
+        this(
+            dataSourcePlugins,
+            capabilities,
+            settings,
+            blockFactory,
+            executor,
+            credentials,
+            managedIdentityEnabled,
+            null,
+            null,
+            null,
+            null,
+            LocalFileAccess.UNRESTRICTED
+        );
+    }
+
+    public DataSourceModule(
+        List<DataSourcePlugin> dataSourcePlugins,
+        DataSourceCapabilities capabilities,
+        Settings settings,
+        BlockFactory blockFactory,
+        ExecutorService executor,
+        DataSourceCredentials credentials,
+        BooleanSupplier managedIdentityEnabled,
+        @Nullable ThreadPool threadPool,
+        @Nullable Environment environment,
+        @Nullable ResourceWatcherService resourceWatcherService,
+        @Nullable MeterRegistry meterRegistry
+    ) {
+        this(
+            dataSourcePlugins,
+            capabilities,
+            settings,
+            blockFactory,
+            executor,
+            credentials,
+            managedIdentityEnabled,
+            threadPool,
+            environment,
+            resourceWatcherService,
+            meterRegistry,
+            LocalFileAccess.UNRESTRICTED
+        );
+    }
+
+    public DataSourceModule(
+        List<DataSourcePlugin> dataSourcePlugins,
+        DataSourceCapabilities capabilities,
+        Settings settings,
+        BlockFactory blockFactory,
+        ExecutorService executor,
+        DataSourceCredentials credentials,
+        BooleanSupplier managedIdentityEnabled,
+        @Nullable ThreadPool threadPool,
+        @Nullable Environment environment,
+        @Nullable ResourceWatcherService resourceWatcherService,
+        @Nullable MeterRegistry meterRegistry,
+        LocalFileAccess localFileAccess
     ) {
         this.capabilities = capabilities;
-        this.storageProviderRegistry = new StorageProviderRegistry(settings);
+        // Node telemetry sink for external-source read metrics; NOOP when no registry is supplied (tests).
+        this.externalSourceMetrics = meterRegistry == null ? ExternalSourceMetrics.NOOP : new ExternalSourceMetrics(meterRegistry);
+        LocalFileAccess effectiveLocalFileAccess = localFileAccess != null ? localFileAccess : LocalFileAccess.UNRESTRICTED;
+        // Off-timer scheduler for the async read-retry backoff, so a retry does not park a GENERIC-pool thread on
+        // Thread.sleep while it waits; DIRECT (run promptly on the executor) when no ThreadPool is supplied (tests).
+        RetryScheduler retryScheduler = threadPool == null
+            ? RetryScheduler.DIRECT
+            : (command, delayMillis, exec) -> threadPool.schedule(command, TimeValue.timeValueMillis(Math.max(0L, delayMillis)), exec);
+        this.storageProviderRegistry = new StorageProviderRegistry(
+            settings,
+            credentials,
+            managedIdentityEnabled,
+            retryScheduler,
+            effectiveLocalFileAccess
+        );
 
         DecompressionCodecRegistry codecRegistry = new DecompressionCodecRegistry();
         for (DataSourcePlugin plugin : dataSourcePlugins) {
-            for (DecompressionCodec codec : plugin.decompressionCodecs(settings)) {
+            for (DecompressionCodec codec : plugin.decompressionCodecs(settings, executor)) {
                 codecRegistry.register(codec);
             }
         }
@@ -77,12 +162,19 @@ public final class DataSourceModule implements Closeable {
 
         Map<String, ExternalSourceFactory> sourceFactoryMap = new LinkedHashMap<>();
         Map<String, SourceOperatorFactoryProvider> operatorFactoryProviders = new HashMap<>();
-        Map<String, FilterPushdownSupport> pluginFilterPushdownProviders = new HashMap<>();
         List<Closeable> closeables = new ArrayList<>();
         Map<String, String> registeredSchemes = new HashMap<>();
 
         for (DataSourcePlugin plugin : dataSourcePlugins) {
-            LazyPluginState state = new LazyPluginState(plugin, settings, executor);
+            LazyPluginState state = new LazyPluginState(plugin, settings, executor, environment, resourceWatcherService);
+
+            // A DataSourcePlugin's storageProviders(StorageProviderServices) may allocate node-level
+            // resources (e.g. token-file watchers). This SPI-discovery instance never receives the
+            // node Plugin#close(), so close it here when the module shuts down. Anonymous test plugins
+            // that only implement DataSourcePlugin (not Plugin) are not Closeable and are skipped.
+            if (plugin instanceof Closeable closeablePlugin) {
+                closeables.add(closeablePlugin);
+            }
 
             // Storage providers: register a delegating factory per declared scheme
             for (String scheme : plugin.supportedSchemes()) {
@@ -108,7 +200,7 @@ public final class DataSourceModule implements Closeable {
                     }
 
                     @Override
-                    public StorageProvider create(Settings s, Map<String, Object> config) {
+                    public Configured<StorageProvider> createTrackingConsumedKeys(Settings s, Map<String, Object> config) {
                         Map<String, StorageProviderFactory> factories = state.storageFactories();
                         StorageProviderFactory real = factories.get(scheme);
                         if (real == null) {
@@ -120,7 +212,7 @@ public final class DataSourceModule implements Closeable {
                                     + "] but storageProviders() did not return it"
                             );
                         }
-                        return real.create(s, config);
+                        return real.createTrackingConsumedKeys(s, config);
                     }
                 };
                 storageProviderRegistry.registerFactory(scheme, delegating);
@@ -153,7 +245,12 @@ public final class DataSourceModule implements Closeable {
             // Connectors: register lazy wrappers only for explicitly declared connector schemes
             Set<String> connectorSchemes = plugin.supportedConnectorSchemes();
             if (connectorSchemes.isEmpty() == false) {
-                LazyConnectorFactory lazyConnector = new LazyConnectorFactory(state, connectorSchemes, plugin.getClass().getName());
+                LazyConnectorFactory lazyConnector = new LazyConnectorFactory(
+                    state,
+                    connectorSchemes,
+                    plugin.getClass().getName(),
+                    credentials
+                );
                 for (String scheme : connectorSchemes) {
                     sourceFactoryMap.putIfAbsent(scheme, lazyConnector);
                 }
@@ -161,7 +258,7 @@ public final class DataSourceModule implements Closeable {
 
             // Table catalogs: register lazy wrappers
             for (String catalogType : plugin.supportedCatalogs()) {
-                LazyTableCatalogWrapper lazyCatalog = new LazyTableCatalogWrapper(state, catalogType, closeables, settings);
+                LazyTableCatalogWrapper lazyCatalog = new LazyTableCatalogWrapper(state, catalogType, closeables, settings, credentials);
                 if (sourceFactoryMap.put(catalogType, lazyCatalog) != null) {
                     throw new IllegalArgumentException("Source factory for type [" + catalogType + "] is already registered");
                 }
@@ -179,16 +276,22 @@ public final class DataSourceModule implements Closeable {
                 }
             }
 
-            // Collect plugin-level filter pushdown support (keyed by format name, e.g. "orc")
-            Map<String, FilterPushdownSupport> pluginFps = plugin.filterPushdownSupport(settings);
-            if (pluginFps.isEmpty() == false) {
-                pluginFilterPushdownProviders.putAll(pluginFps);
-            }
         }
 
         // Register the framework-internal FileSourceFactory as a catch-all fallback.
         // It must be last so that plugin-provided factories (Iceberg, Flight) get priority.
-        FileSourceFactory fileFallback = new FileSourceFactory(storageProviderRegistry, formatReaderRegistry, codecRegistry, settings);
+        // Pass the node-level (root) BlockFactory so VirtualColumnIterator allocations route
+        // through the global request circuit breaker rather than the driver-local breaker.
+        FileSourceFactory fileFallback = new FileSourceFactory(
+            storageProviderRegistry,
+            formatReaderRegistry,
+            codecRegistry,
+            settings,
+            executor,
+            blockFactory,
+            effectiveLocalFileAccess,
+            externalSourceMetrics
+        );
         sourceFactoryMap.put("file", fileFallback);
         // Also register under each format name so OperatorFactoryRegistry can look up
         // by the sourceType returned from FormatReader.formatName() (e.g. "parquet", "csv").
@@ -196,29 +299,15 @@ public final class DataSourceModule implements Closeable {
             sourceFactoryMap.putIfAbsent(formatName, fileFallback);
         }
 
-        this.sourceFactories = Map.copyOf(sourceFactoryMap);
+        // Insertion order is load-bearing, so this cannot be Map.copyOf: that returns a map whose iteration order the
+        // JDK documents as unspecified, silently discarding the "file factory last" ordering established above.
+        // ExternalSourceResolver picks the FIRST factory whose canHandle claims a path, and the claims genuinely
+        // overlap: the Iceberg catalog wrapper claims an extensionless s3 object (a table directory), and the file
+        // factory's config-aware canHandle claims that same object whenever an explicit `format` is configured. With
+        // an undefined order, which one resolves such a path would vary between nodes and restarts.
+        this.sourceFactories = Collections.unmodifiableMap(new LinkedHashMap<>(sourceFactoryMap));
         this.pluginFactories = Map.copyOf(operatorFactoryProviders);
         this.managedCloseables = closeables;
-
-        // Build FilterPushdownRegistry from two sources:
-        // 1. ExternalSourceFactory.filterPushdownSupport() — for catalog/connector factories (Iceberg, Flight)
-        // 2. DataSourcePlugin.filterPushdownSupport() — for format-level pushdown (ORC, Parquet)
-        Map<String, FilterPushdownSupport> filterPushdownProviders = new HashMap<>();
-        // First: collect from ExternalSourceFactory instances (non-lazy only)
-        for (Map.Entry<String, ExternalSourceFactory> entry : this.sourceFactories.entrySet()) {
-            ExternalSourceFactory factory = entry.getValue();
-            // Skip lazy wrappers to avoid triggering classloading
-            if (factory instanceof LazyConnectorFactory || factory instanceof LazyTableCatalogWrapper) {
-                continue;
-            }
-            FilterPushdownSupport fps = factory.filterPushdownSupport();
-            if (fps != null) {
-                filterPushdownProviders.put(entry.getKey(), fps);
-            }
-        }
-        // Second: merge plugin-level registrations (keyed by format name, e.g. "orc")
-        filterPushdownProviders.putAll(pluginFilterPushdownProviders);
-        this.filterPushdownRegistry = new FilterPushdownRegistry(filterPushdownProviders);
     }
 
     @Override
@@ -245,12 +334,26 @@ public final class DataSourceModule implements Closeable {
         return sourceFactories;
     }
 
-    public FilterPushdownRegistry filterPushdownRegistry() {
-        return filterPushdownRegistry;
+    /** The node-level external-source telemetry holder, or {@link ExternalSourceMetrics#NOOP} when no registry was supplied. */
+    public ExternalSourceMetrics externalSourceMetrics() {
+        return externalSourceMetrics;
     }
 
+    /**
+     * Convenience overload that backs BOTH registry roles with a single executor. This collapses the
+     * page-consumer/coordination role and the read/parse role onto one pool, which is the exact wiring that
+     * deadlocks multi-file text reads in production (a full pool of blocked parser workers with no free thread
+     * left to run the drain that consumes them). It is safe only for synchronous / single-threaded callers
+     * (e.g. {@code Runnable::run} in tests). Production wiring must use
+     * {@link #createOperatorFactoryRegistry(Executor, Executor)} with two distinct pools —
+     * see {@code TransportEsqlQueryAction}.
+     */
     public OperatorFactoryRegistry createOperatorFactoryRegistry(Executor executor) {
-        return new OperatorFactoryRegistry(sourceFactories, pluginFactories, executor);
+        return createOperatorFactoryRegistry(executor, executor);
+    }
+
+    public OperatorFactoryRegistry createOperatorFactoryRegistry(Executor executor, Executor fileReadExecutor) {
+        return new OperatorFactoryRegistry(sourceFactories, pluginFactories, executor, fileReadExecutor);
     }
 
     /**
@@ -261,22 +364,36 @@ public final class DataSourceModule implements Closeable {
         private final DataSourcePlugin plugin;
         private final Settings settings;
         private final ExecutorService executor;
+        @Nullable
+        private final Environment environment;
+        @Nullable
+        private final ResourceWatcherService resourceWatcherService;
         private volatile Map<String, StorageProviderFactory> storageFactoriesCache;
         private volatile Map<String, FormatReaderFactory> formatFactoriesCache;
         private volatile Map<String, ConnectorFactory> connectorFactoriesCache;
         private volatile Map<String, TableCatalogFactory> catalogFactoriesCache;
 
-        LazyPluginState(DataSourcePlugin plugin, Settings settings, ExecutorService executor) {
+        LazyPluginState(
+            DataSourcePlugin plugin,
+            Settings settings,
+            ExecutorService executor,
+            @Nullable Environment environment,
+            @Nullable ResourceWatcherService resourceWatcherService
+        ) {
             this.plugin = plugin;
             this.settings = settings;
             this.executor = executor;
+            this.environment = environment;
+            this.resourceWatcherService = resourceWatcherService;
         }
 
         Map<String, StorageProviderFactory> storageFactories() {
             if (storageFactoriesCache == null) {
                 synchronized (this) {
                     if (storageFactoriesCache == null) {
-                        storageFactoriesCache = plugin.storageProviders(settings, executor);
+                        storageFactoriesCache = plugin.storageProviders(
+                            new StorageProviderServices(settings, executor, environment, resourceWatcherService)
+                        );
                     }
                 }
             }
@@ -324,12 +441,14 @@ public final class DataSourceModule implements Closeable {
         private final LazyPluginState state;
         private final Set<String> declaredSchemes;
         private final String pluginName;
+        private final DataSourceCredentials credentials;
         private volatile ConnectorFactory delegate;
 
-        LazyConnectorFactory(LazyPluginState state, Set<String> declaredSchemes, String pluginName) {
+        LazyConnectorFactory(LazyPluginState state, Set<String> declaredSchemes, String pluginName, DataSourceCredentials credentials) {
             this.state = state;
             this.declaredSchemes = declaredSchemes;
             this.pluginName = pluginName;
+            this.credentials = credentials;
         }
 
         @Override
@@ -352,20 +471,17 @@ public final class DataSourceModule implements Closeable {
 
         @Override
         public SourceMetadata resolveMetadata(String location, Map<String, Object> config) {
-            return resolveDelegate().resolveMetadata(location, config);
+            return resolveDelegate().resolveMetadata(location, credentials.decryptInPlace(config));
+        }
+
+        @Override
+        public void validateConfig(String location, Map<String, Object> config) {
+            resolveDelegate().validateConfig(location, credentials.decryptInPlace(config));
         }
 
         @Override
         public Connector open(Map<String, Object> config) {
-            return resolveDelegate().open(config);
-        }
-
-        @Override
-        public FilterPushdownSupport filterPushdownSupport() {
-            if (delegate == null) {
-                return null;
-            }
-            return delegate.filterPushdownSupport();
+            return resolveDelegate().open(credentials.decryptInPlace(config));
         }
 
         @Override
@@ -409,19 +525,34 @@ public final class DataSourceModule implements Closeable {
     /**
      * Lazy table catalog wrapper whose canHandle() uses heuristics (S3 scheme + no file extension)
      * without loading Iceberg classes.
+     *
+     * <p>Decryption step: every config-map entry exposed by this wrapper passes through the wrapper's
+     * {@link DataSourceCredentials#decryptInPlace(java.util.Map)} before delegation. The wrapper
+     * deliberately exposes only the {@link ExternalSourceFactory} surface — direct callers of the
+     * underlying {@link org.elasticsearch.xpack.esql.datasources.spi.TableCatalog#planScan(String, java.util.Map, java.util.List)}
+     * (no in-tree callers today; Iceberg is the only implementor) must route their config through
+     * {@code decryptInPlace} before invocation, or widen this wrapper to forward {@code planScan} the same way.
      */
     static class LazyTableCatalogWrapper implements ExternalSourceFactory {
         private final LazyPluginState state;
         private final String catalogType;
         private final List<Closeable> managedCloseables;
         private final Settings settings;
+        private final DataSourceCredentials credentials;
         private volatile TableCatalog delegate;
 
-        LazyTableCatalogWrapper(LazyPluginState state, String catalogType, List<Closeable> managedCloseables, Settings settings) {
+        LazyTableCatalogWrapper(
+            LazyPluginState state,
+            String catalogType,
+            List<Closeable> managedCloseables,
+            Settings settings,
+            DataSourceCredentials credentials
+        ) {
             this.state = state;
             this.catalogType = catalogType;
             this.managedCloseables = managedCloseables;
             this.settings = settings;
+            this.credentials = credentials;
         }
 
         @Override
@@ -455,15 +586,12 @@ public final class DataSourceModule implements Closeable {
 
         @Override
         public SourceMetadata resolveMetadata(String location, Map<String, Object> config) {
-            return resolveDelegate().resolveMetadata(location, config);
+            return resolveDelegate().resolveMetadata(location, credentials.decryptInPlace(config));
         }
 
         @Override
-        public FilterPushdownSupport filterPushdownSupport() {
-            if (delegate == null) {
-                return null;
-            }
-            return delegate.filterPushdownSupport();
+        public void validateConfig(String location, Map<String, Object> config) {
+            resolveDelegate().validateConfig(location, credentials.decryptInPlace(config));
         }
 
         @Override
